<resources>
    <string name="app_name">BuildYourFlag</string>
    <string name="country_name_hint">Enter the country name</string>
    <string name="top_text">Choose top color</string>
    <string name="middle_text">Choose middle color</string>
    <string name="bottom_text">Choose bottom color</string>
    <string name="red_text">Red</string>
    <string name="blue_text">Blue</string>
    <string name="green_text">Green</string>
    <string name="set_button_text">Set</string>

    <string-array name="colors">
        <item>white</item>
        <item>green</item>
        <item>yellow</item>
    </string-array>

</resources>