<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".BottomActivity">

  <RadioGroup
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/blueRb"
        android:text="@string/blue_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:id="@+id/redRb"
        android:checked="true"
        android:text="@string/red_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:id="@+id/greenRb"
        android:text="@string/green_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </RadioGroup>

  <Button
      android:onClick="bottomSetButton"
      android:layout_marginTop="50dp"
      android:textSize="20dp"
      android:text="@string/set_button_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>


  </LinearLayout>