<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TopActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top_text"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="24dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FF0000"
        android:contextClickable="false"
        android:onClick="redButtonFunction"
        android:text="@string/red_text"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:cornerRadius="0dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#0000FF"
        android:contextClickable="false"
        android:onClick="blueButtonFunction"
        android:text="@string/blue_text"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:cornerRadius="0dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#00FF00"
        android:contextClickable="false"
        android:onClick="greenButtonFunction"
        android:text="@string/green_text"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:cornerRadius="0dp" />

</LinearLayout>